Mojo C++ bindings: Serialize handles during message allocation
This changes C++ bindings to collect handles during the message sizing
phase of serialization so that a single Message object can be allocated
prior to full serialization.

This reduces the cost of sending messages with attached handles. It also
fulfills a necessary precondition for C++ bindings supporting lazy
serialization, as it would not be possible to re-allocate a message
object (as we do now) once a deferred serialization operation has been
coerced by Mojo internals.

In order to support this a few changes to serialization semantics are
applied here:

  - Handle and interface accessors on StructTraits must return lvalue
    references as they will be called twice: once during sizing and
    once during serialization.
  - SetUpContext and TearDownContext are always called even for nullable
    custom types which report themselves as null
  - IsNull supports being called with context so that e.g. traits can
    move or otherwise store handle and interface types in the context
    object at context creation, and these objects may in turn need to be
    used for nullability testing.

BUG=725321
R=yzshen@chromium.org

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I7056651222641220301e9adfce5028dc3501884f

--- a/mojo/public/tools/bindings/generators/cpp_templates/interface_definition.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/interface_definition.tmpl
@@ -161,7 +161,8 @@ bool {{proxy_name}}::{{method.name}}(
   mojo::Message message(
       {{message_name}},
       mojo::Message::kFlagIsSync | mojo::Message::kFlagExpectsResponse,
-      size, serialization_context.associated_endpoint_count);
+      size, serialization_context.associated_endpoint_count,
+      serialization_context.handles.mutable_handles());
   {{build_message(params_struct, "param_%s", params_description,
                   "&serialization_context", "&message")}}
 
@@ -188,7 +189,8 @@ void {{proxy_name}}::{{method.name}}(
   constexpr uint32_t kFlags = 0;
 {%- endif %}
   mojo::Message message({{message_name}}, kFlags, size,
-                        serialization_context.associated_endpoint_count);
+                        serialization_context.associated_endpoint_count,
+                        serialization_context.handles.mutable_handles());
   {{build_message(params_struct, "in_%s", params_description,
                   "&serialization_context", "&message")}}
 
@@ -270,7 +272,8 @@ void {{class_name}}_{{method.name}}_ProxyToResponder::Run(
   uint32_t flags = (is_sync_ ? mojo::Message::kFlagIsSync : 0) |
                    mojo::Message::kFlagIsResponse;
   mojo::Message message({{message_name}}, flags, size,
-                        serialization_context.associated_endpoint_count);
+                        serialization_context.associated_endpoint_count,
+                        serialization_context.handles.mutable_handles());
   {{build_message(response_params_struct, "in_%s", params_description,
                   "&serialization_context", "&message")}}
   message.set_request_id(request_id_);
