--- a/mojo/public/tools/bindings/generators/cpp_templates/union_serialization_declaration.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/union_serialization_declaration.tmpl
@@ -12,8 +12,9 @@ struct Serializer<{{data_view}}, MaybeConstUserType> {
                                    bool inlined,
                                    SerializationContext* context) {
     size_t size = inlined ? 0 : sizeof({{data_type}});
-
-    if (CallIsNullIfExists<Traits>(input))
+    const bool is_null = CallIsNullIfExists<Traits>(input);
+    context->null_states.container().push_back(is_null);
+    if (is_null)
       return size;
 
     void* custom_context = CustomContextHelper<Traits>::SetUp(input, context);
@@ -23,7 +24,8 @@ struct Serializer<{{data_view}}, MaybeConstUserType> {
 {%- for field in union.fields %}
 {%-   set name = field.name %}
       case {{data_view}}::Tag::{{name|upper}}: {
-{%-   if field.kind|is_object_kind or field.kind|is_associated_kind %}
+{%-   if field.kind|is_object_kind or
+          field.kind|is_any_handle_or_interface_kind %}
 {%-     set kind = field.kind %}
 {%-     set serializer_type = kind|unmapped_type_for_serializer %}
         decltype(CallWithContext(Traits::{{name}}, input, custom_context))
@@ -49,7 +51,7 @@ struct Serializer<{{data_view}}, MaybeConstUserType> {
                         {{data_type}}** output,
                         bool inlined,
                         SerializationContext* context) {
-    if (CallIsNullIfExists<Traits>(input)) {
+    if (context->IsNextFieldNull()) {
       if (inlined)
         (*output)->set_null();
       else
