--- a/mojo/public/tools/bindings/generators/cpp_templates/struct_macros.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/struct_macros.tmpl
@@ -20,7 +20,8 @@
                               input_may_be_temp=False) -%}
   size_t size = sizeof({{struct|get_qualified_name_for_kind(internal=True)}});
 {%-   for pf in struct.packed.packed_fields_in_ordinal_order
-          if pf.field.kind|is_object_kind or pf.field.kind|is_associated_kind %}
+          if pf.field.kind|is_object_kind or
+              pf.field.kind|is_any_handle_or_interface_kind %}
 {%-     set name = pf.field.name -%}
 {%-     set kind = pf.field.kind -%}
 {%-     set original_input_field = input_field_pattern|format(name) %}
@@ -73,7 +74,14 @@
 {%-     set input_field = "in_%s"|format(name) if input_may_be_temp
                                                else original_input_field %}
 {%-     if input_may_be_temp %}
+{%-       if kind|is_associated_kind or kind|is_object_kind %}
   decltype({{original_input_field}}) in_{{name}} = {{original_input_field}};
+{%-       else %}
+  // Dummy input value. The serialized value is already stored in the
+  // SerializationContext.
+  typename std::remove_reference<decltype({{original_input_field}})>::type
+      in_{{name}};
+{%-       endif %}
 {%-     endif %}
 {%-   endif %}
 
