WIP: Fix 2D flash entering VR for realz
Bug:
Change-Id: I96b16bf0e3d2491c7b8ff915a3704a383098ad05

--- a/chrome/android/java/res/values-v17/styles.xml
+++ b/chrome/android/java/res/values-v17/styles.xml
@@ -737,7 +737,7 @@
 
     <!-- VR animations -->
     <style name="VrEntryAnimation">
-        <item name="android:windowEnterAnimation">@anim/stay_hidden</item>
+        <item name="android:windowEnterAnimation">@anim/stay_hidden1</item>
         <item name="android:windowExitAnimation">@null</item>
     </style>
 </resources>
