--- a/chrome/android/java/res/values/dimens.xml
+++ b/chrome/android/java/res/values/dimens.xml
@@ -52,6 +52,7 @@
     <!-- Custom Menu dimensions -->
     <dimen name="menu_width">258dp</dimen>
     <dimen name="menu_negative_software_vertical_offset">0dp</dimen>
+    <dimen name="menu_anchor_at_bottom_vertical_offset">8dp</dimen>
     <!-- The amount to fade the edges of the menu to indicate more content is available
          via scrolling. -->
     <dimen name="menu_vertical_fade_distance">15dp</dimen>
