--- a/mojo/public/tools/bindings/generators/cpp_templates/interface_definition.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/interface_definition.tmpl
@@ -132,11 +132,12 @@ bool {{proxy_name}}::{{method.name}}(
       , std::move(param_{{param.name}})
 {%-     endfor %});
 {%-   else %}
+  mojo::Message message;
   {{interface_macros.build_message_flags(False, "kIsSync", "kExpectsResponse",
                                          "kFlags")}}
   {{interface_macros.build_serialized_message(
       message_name, "param_%s", params_struct, params_description, "kFlags",
-      "message")}}
+      "&message")}}
 {%-   endif %}
 
   bool result = false;
@@ -167,11 +168,12 @@ void {{proxy_name}}::{{method.name}}(
       , std::move(in_{{param.name}})
 {%-     endfor %});
 {%-   else %}
+  mojo::Message message;
   {{interface_macros.build_message_flags(False, "kIsSync", "kExpectsResponse",
                                          "kFlags")}}
   {{interface_macros.build_serialized_message(
       message_name, "in_%s", params_struct, params_description, "kFlags",
-      "message")}}
+      "&message")}}
 {%-   endif %}
 
 {%- if method.response_parameters != None %}
@@ -293,10 +295,11 @@ void {{class_name}}_{{method.name}}_ProxyToResponder::Run(
       , std::move(in_{{param.name}})
 {%-     endfor %});
 {%-   else %}
+  mojo::Message message;
   {{interface_macros.build_message_flags(True, "is_sync_", "false", "kFlags")}}
   {{interface_macros.build_serialized_message(
       message_name, "in_%s", response_params_struct,
-      response_params_description, "kFlags", "message")}}
+      response_params_description, "kFlags", "&message")}}
 {%-   endif %}
 
   message.set_request_id(request_id_);
