[Offline pages][Internals] Update internal page download so it displays the JSON in a text area rather than attempting to initiate download via data url
Data urls are disabled from top-level navigations as of Chrome 60

Bug: 775599
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I6a66eaf19f005cbf75640db146ea4ca4acf26277

--- a/chrome/browser/resources/offline_pages/offline_internals.css
+++ b/chrome/browser/resources/offline_pages/offline_internals.css
@@ -55,3 +55,18 @@ li:nth-child(2n) {
   font-family: monospace;
   white-space: pre-wrap;
 }
+
+#dump {
+  background-color: rgba(0, 0, 0, 0.2);
+  display: none;
+  margin: auto;
+  width: 80%;
+  z-index: 2;
+}
+
+#dump-box {
+  box-sizing: border-box;
+  display: block;
+  resize: none;
+  width: 100%;
+}
